fixing scaling on mobile/lower
blocked at 655 px width for nav

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,6 +171,9 @@ div.row {
     header {
     display: block;
     }
+    div#Name {
+    display: block; 
+    margin-left:0;
 }
        
 
